# dotguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: dotguard.yml
src/dotguard/: __init__.py  cli.py  git_check.py  init_cmd.py  validator.py
src/dotguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_dotguard.py
