[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotguard"
version = "0.1.0"
description = "Validate your .env file against .env.example before you deploy."
license = "MIT"
requires-python = ">=3.9"

[project.scripts]
dotguard = "dotguard.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
